# twine

./: AGENT.md  Cargo.toml  DESIGN.md  README.md  REQUIREMENTS.md  TASKS.md  agent.md  design.md  requirements.md  tasks.md
examples/: error_demo.scm
scripts/: README.md  setup-deps.sh  update-deps.sh  vendor-deps.sh
src/: error.rs  lexer.rs  lib.rs  main.rs  parser.rs  types.rs
src/fiber/: executor.rs  mod.rs  scheduler.rs
src/interpreter/: environment.rs  eval.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: expression.rs  mod.rs
src/repl/: mod.rs
src/runtime/: environment.rs  eval.rs  mod.rs  special_forms.rs  utils.rs
src/runtime/builtin/: mod.rs
src/runtime/builtins/: arithmetic.rs  comparison.rs  io.rs  list.rs  mod.rs  predicates.rs
src/runtime/eval/: mod.rs  procedure.rs
src/runtime/special_forms/: binding.rs  concurrency.rs  control_flow.rs  lambda.rs  mod.rs
src/scheduler/: async_ops.rs  mod.rs  scheduler.rs  types.rs
src/types/: list.rs  mod.rs  number.rs  procedure.rs  procedures.rs  string.rs  symbol.rs  value.rs
tests/: basic_integration.rs  integration.rs  integration_advanced.rs  integration_arithmetic.rs  integration_basic.rs  integration_binding.rs  integration_builtins.rs  integration_comparison.rs  integration_conditionals.rs  integration_control_flow.rs  integration_define_procedure.rs  integration_io.rs  integration_lambda.rs  integration_lambda_application.rs  integration_let.rs  integration_list.rs  integration_lists.rs
tests/common/: mod.rs
